2on/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - 2on.olszewskib.org
    secretName: 2on-tls
  rules:
  - host: 2on.olszewskib.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
